# turtlecoin

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CryptoNoteConfig.h  Dockerfile  Dockerfile.dev  Dockerfile.test  README.md  TurtleCoinStyle.xml
.github/workflows/: matrix.yml
cmake/: FindReadline.cmake  Findcurses.cmake  Findreadline.cmake
include/: BlockchainExplorerData.h  CryptoNote.h  CryptoTypes.h  IBlockchainExplorer.h  IDataBase.h  INode.h  IObservable.h  IReadBatch.h  IStreamSerializable.h  ITransaction.h  ITransfersContainer.h  ITransfersSynchronizer.h  IWallet.h  IWalletLegacy.h  IWriteBatch.h  JsonHelper.h  WalletGreenTypes.h  WalletTypes.h
scripts/: build-release.sh  multi_installer.sh  setup
scripts/extra/: encode.py
src/: CMakeLists.txt  CryptoNoteCheckpoints.h  CryptoNoteConfig.h  version.cmake
src/BlockchainExplorer/: BlockchainExplorer.cpp  BlockchainExplorer.h  BlockchainExplorerErrors.cpp  BlockchainExplorerErrors.h
src/Common/: ArrayRef.h  ArrayView.h  Base58.cpp  Base58.h  BlockingQueue.cpp  BlockingQueue.h  CheckDifficulty.cpp  CheckDifficulty.h  CommandLine.cpp  CommandLine.h  ConsoleHandler.cpp  ConsoleHandler.h  ConsoleTools.cpp  ConsoleTools.h  CryptoNoteTools.h  FileMappedVector.cpp  FileMappedVector.h  FormatTools.cpp  FormatTools.h  IInputStream.cpp  IInputStream.h  IOutputStream.cpp  IOutputStream.h  JsonValue.cpp  JsonValue.h  Math.cpp  Math.h  MemoryInputStream.cpp  MemoryInputStream.h  ObserverManager.h  PathTools.cpp  PathTools.h  ScopeExit.cpp  ScopeExit.h  ShuffleGenerator.h  SignalHandler.cpp  SignalHandler.h  StdInputStream.cpp  StdInputStream.h  StdOutputStream.cpp  (+22 more)
src/ConnectivityTool/: ConnectivityTool.cpp
src/CryptoNoteCore/: Account.cpp  Account.h  AddBlockErrorCondition.cpp  AddBlockErrorCondition.h  (+120 more)
src/test/: CMakeLists.txt  test.cpp
tests/: HashTarget.cpp  Io.h
(+1138 files in other folders)
